opam-version: "2.0"
name: "javalib"
version: "3.2.2"
maintainer: "David Pichardie <david.pichardie@ens-rennes.fr>"
authors: "Javalib Development team"
homepage: "https://javalib-team.github.io/javalib/"
bug-reports: "https://github.com/javalib-team/javalib/issues"
license: "LGPL-2.1-only WITH OCaml-LGPL-linking-exception"
dev-repo: "git+https://github.com/javalib-team/javalib.git"
build: [
  ["./configure.sh" "-s" {ocaml:native-dynlink}]
  [make]
]
install: [make "install"]
depends: [
  "ocaml" {>= "4.08"}
  "conf-which" {build}
  "ocamlfind" {build}
  "camlzip" {>= "1.11"}
  "extlib"
]

synopsis: "Javalib is a library written in OCaml with the aim to provide a high level representation of Java .class files"

description: """
Thus it stands for a good starting point for people who want to
develop static analyses for Java byte-code programs, benefiting from
the strength of OCaml language.
"""
